commenting out hamburger menu for the meantime as causing overflow issue

--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ body {
             margin-bottom: 200px;
 
             @media screen and (max-width: 768px) {
-                width: 80%;
+                width: 90%;
                 margin: 0 auto;
                 margin-bottom: 200px;
             }
