--- a/styles/base/_resets.scss
+++ b/styles/base/_resets.scss
@@ -6,6 +6,10 @@
     margin: 0;
 }
 
+body {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
     cursor: pointer;
