--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -32,6 +32,7 @@
 
     &:hover {
         background-color: #504E7A;
+        color: $white;
     }
 }
 
